# upeoXpense

./: .gitignore  README.md  license.txt  pyproject.toml
upeo_xpense/: api.py  hooks.py  install.py  modules.txt  pipeline.py  validators.py  whatsapp.py
upeo_xpense/prompts/: extract_v1.txt
upeo_xpense/public/js/: upeoxpense.bundle.js
upeo_xpense/public/js/upeoxpense/: App.vue  api.js  format.js
upeo_xpense/public/js/upeoxpense/components/: BarList.vue  DonutChart.vue  Drawer.vue  KpiCard.vue  Modal.vue  StatusPill.vue  TrendChart.vue
upeo_xpense/public/js/upeoxpense/views/: Categories.vue  Claims.vue  Dashboard.vue  Receipts.vue  Settings.vue
upeo_xpense/tests/: test_pipeline.py  test_units.py  test_validators.py
upeo_xpense/upeoxpense/doctype/receipt_capture/: receipt_capture.json  receipt_capture.py
upeo_xpense/upeoxpense/doctype/upeoxpense_settings/: upeoxpense_settings.js  upeoxpense_settings.json  upeoxpense_settings.py
upeo_xpense/upeoxpense/doctype/vendor_mapping/: vendor_mapping.json  vendor_mapping.py
upeo_xpense/upeoxpense/workspace/upeoxpense/: upeoxpense.json
upeo_xpense/www/: upeoxpense.html  upeoxpense.py
