[project]
name = "upeo_xpense"
authors = [
    { name = "Karani Geoffrey", email = "karani@upeosoft.com"}
]
description = "WhatsApp receipt capture and draft expense claims for a single ERPNext instance"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "anthropic>=0.40.0",
    "Pillow>=10.0.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
